--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
+    },
+    "replace": {
+        "dasumi/base-api-wrapper":"0.2.0"
     }
 }
